# Aelira

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md
src/: aelira.rs  config.rs  main.rs
src/api/: mod.rs
src/api/middlewares/: auth.rs
src/api/routes/: decodetrack.rs  decodetracks.rs  encodetrack.rs  encodetracks.rs  info.rs  loadtracks.rs  mod.rs  routeplanner.rs  sessions.rs  stats.rs  version.rs  websocket.rs
src/managers/: mod.rs  players.rs  route_planner.rs  sessions.rs  sources.rs  stats.rs
src/models/: load_tracks.rs  mod.rs
src/playback/: codecs.rs  mod.rs  processor.rs
src/playback/decoder/: symphonia.rs
src/playback/demuxers/: webm.rs
src/playback/voice/: connection.rs  crypto.rs  mod.rs  stream.rs  udp.rs  websocket.rs
src/socket/: handler.rs  mod.rs
src/sources/local/: mod.rs
src/utils/: encoding.rs  mod.rs
