[package]
name = "Aelira"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
toml = "0.9.11"
sysinfo = "0.37.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
