[package]
name = "Aelira"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
warp = { version = "0.4", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
toml = "0.9.11"
sysinfo = "0.37.2"
futures-util = "0.3.31"
rand = "0.9.2"
serde_json = "1.0.149"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
