[package]
name = "Aelira"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
warp = { version = "0.4", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
toml = "0.9.11"
sysinfo = "0.37.2"
futures-util = "0.3.31"
rand = "0.9.2"
serde_json = "1.0.149"
chrono = "0.4.42"
aes-gcm = "0.10.3"
aead = "0.5.2"
base64 = "0.22.1"
symphonia = { version = "0.5.5", features = ["all"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures = "0.3"
async-trait = "0.1.89"
regex = "1.12.2"
audiopus = { version = "0.2.0", features = ["encoder", "coder"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
cc = "1.2.52"
